fix: remove horizontal scroll bar

--- a/styles.css
+++ b/styles.css
@@ -1,61 +1,66 @@
 * {
-	box-sizing: border-box;
-}
-
-a:any-link {
-	color: #FF69B4;
-	text-decoration: none;
-}
-
-html {
-	font-size: 20px;
+  box-sizing: border-box;
 }
 
 body {
-	margin: 0;
-	background-color: #E5E5E5;
-	padding: 4px;
+  width: 100vw;
+  overflow: hidden;
+}
+
+a:any-link {
+  color: #ff69b4;
+  text-decoration: none;
+}
+
+html {
+  font-size: 20px;
+}
+
+body {
+  margin: 0;
+  background-color: #e5e5e5;
+  padding: 4px;
 }
 
 main {
-	width: 100%;
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	font-family: Verdana, Geneva, sans-serif;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  font-family: Verdana, Geneva, sans-serif;
 }
 
 figure {
-	max-width: 40vmax;
-	width: 100%;
-	display: flex;
-	flex-direction: column;
-	align-items: center;
+  max-width: 40vmax;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 #image {
-	max-width: 100%;
-	width: 100%;
-	height: auto;
+  max-width: 100%;
+  width: 100%;
+  height: auto;
 }
 
 figcaption {
-	font-size: 0.8em;
-	width: 100%;
+  font-size: 0.8em;
+  width: 100%;
 }
 
 #tribute-info {
-	margin-top: 24px;
+  margin-top: 24px;
 }
 
-#tribute-info>p,
-main>a {
-	width: 100%;
-	align-self: flex-start;
+#tribute-info > p,
+main > a {
+  width: 100%;
+  align-self: flex-start;
 }
 
 h1 {
-	font-size: 3em;
-	font-weight: 400;
-	border-bottom: 4px solid black;
+  font-size: 3em;
+  font-weight: 400;
+  border-bottom: 4px solid black;
 }
